--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -19,18 +19,18 @@
 		android:title="@string/pref_title_play_from_here"/>
 
 	<SwitchPreference
-		android:defaultValue="false"
+		android:defaultValue="true"
 		android:key="remember_location"
 		android:summary="@string/pref_description_remember_location"
-		android:title="@string/pref_title_remember_location"/>
+		android:title="@string/pref_title_remember_location" />
 
 	<SwitchPreference
-		android:defaultValue="false"
-		android:key="auto_start"
+		android:defaultValue="true"
 		android:dependency="remember_location"
 		android:disableDependentsState="true"
+		android:key="auto_start"
 		android:summary="@string/pref_description_auto_start"
-		android:title="@string/pref_title_auto_start"/>
+		android:title="@string/pref_title_auto_start" />
 
 	<SwitchPreference
 		android:defaultValue="false"
@@ -39,7 +39,7 @@
 		android:title="@string/pref_title_use_device_root"/>
 
 	<EditTextPreference
-		android:defaultValue="3"
+		android:defaultValue="6"
 		android:key="slide_delay"
 		android:summary="@string/pref_description_slide_delay"
 		android:title="@string/pref_title_slide_delay"
@@ -74,10 +74,10 @@
 		android:title="@string/pref_title_preload_images"/>
 
 	<SwitchPreference
-		android:defaultValue="false"
+		android:defaultValue="true"
 		android:key="auto_rotate_dimen"
 		android:summary="@string/pref_description_auto_rotate_dimen"
-		android:title="@string/pref_title_auto_rotate_dimen"/>
+		android:title="@string/pref_title_auto_rotate_dimen" />
 
 	<SwitchPreference
 		android:defaultValue="false"
@@ -108,16 +108,16 @@
 		android:title="@string/pref_title_reverse_order"/>
 
 	<SwitchPreference
-		android:defaultValue="false"
+		android:defaultValue="true"
 		android:key="random_order"
 		android:summary="@string/pref_description_random_order"
-		android:title="@string/pref_title_random_order"/>
+		android:title="@string/pref_title_random_order" />
 
 	<SwitchPreference
-		android:defaultValue="false"
+		android:defaultValue="true"
 		android:key="refresh_folder"
 		android:summary="@string/pref_description_refresh_folder"
-		android:title="@string/pref_title_refresh_folder"/>
+		android:title="@string/pref_title_refresh_folder" />
 
 	<SwitchPreference
 		android:defaultValue="true"
